--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
     <p class="game-explanation">
       <strong class="important">How to play:</strong> Use your <strong>arrow keys</strong> to move the tiles. When two tiles with the same number touch, they <strong>merge into one!</strong>
-	    <strong> order:</strong> Heidi, Victoria, Claduia, Willis, Kayley, Skyles, Haley, Lauren, Claire, Michael, JAMES
+	    <strong> order:</strong> Heidi, Victoria, Claduia, Willis, Kayley, Skyles, Haley, Olivia, Claire, Michael, JAMES
     </p>
     <hr>
     <p>
