--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>2040-whom</title>
+  <title>2048?</title>
 
   <link href="style/main.css" rel="stylesheet" type="text/css">
   <link rel="shortcut icon" href="favicon.ico">
@@ -19,7 +19,7 @@
 <body>
   <div class="container">
     <div class="heading">
-      <h1 class="title">2040-whom</h1>
+      <h1 class="title">2048?</h1>
       <div class="scores-container">
         <div class="score-container">0</div>
         <div class="best-container">0</div>
@@ -74,7 +74,6 @@
 
     <p class="game-explanation">
       <strong class="important">How to play:</strong> Use your <strong>arrow keys</strong> to move the tiles. When two tiles with the same number touch, they <strong>merge into one!</strong>
-	    <strong> order:</strong> Heidi, Victoria, Claduia, Willis, Kayley, Skyles, Haley, Olivia, Claire, Michael, JAMES
     </p>
     <hr>
     <p>
