--- a/index.html
+++ b/index.html
@@ -72,6 +72,24 @@
       </div>
     </div>
 
+<div class="sel-container">
+	<div id="sel-top">
+		<img src="style/James_People/2.jpeg" style="width: 15%">
+		<img src="style/James_People/4.jpeg" style="width: 15%">
+		<img src="style/James_People/8.jpeg" style="width: 15%">
+		<img src="style/James_People/16.jpeg" style="width: 15%">
+		<img src="style/James_People/32.jpeg" style="width: 15%">
+		<img src="style/James_People/64.jpeg" style="width: 15%">
+	</div>
+	<div id="sel-btm">
+		<img src="style/James_People/128.jpeg" style="width: 15%">
+		<img src="style/James_People/256.jpeg" style="width: 15%">
+		<img src="style/James_People/512.jpeg" style="width: 15%">
+		<img src="style/James_People/1024.jpeg" style="width: 15%">
+		<img src="style/James_People/2048.jpeg" style="width: 15%">
+	</div>
+</div>
+	  
     <p class="game-explanation">
       <strong class="important">How to play:</strong> Use your <strong>arrow keys</strong> to move the tiles. When two tiles with the same face touch, they <strong>merge into one!</strong>
     </p>
