--- a/index.html
+++ b/index.html
@@ -88,6 +88,11 @@
 		<img src="style/James_People/1024.jpeg" style="width: 15%">
 		<img src="style/James_People/2048.jpeg" style="width: 15%">
 	</div>
+	<div id="btn-container">
+		<a class="sel-button" style="float: left;">Last</a><p id="sel-display" style="display: inline;">Hello</p>
+
+		<a class="sel-button" style="float: right;">Next</a>
+	</div>
 </div>
 	  
     <p class="game-explanation">
