--- a/index.html
+++ b/index.html
@@ -75,19 +75,19 @@
 
 <div class="sel-container">
 	<div id="sel-top">
-		<img src="style/James_People/2.jpeg" style="width: 15%">
-		<img src="style/James_People/4.jpeg" style="width: 15%">
-		<img src="style/James_People/8.jpeg" style="width: 15%">
-		<img src="style/James_People/16.jpeg" style="width: 15%">
-		<img src="style/James_People/32.jpeg" style="width: 15%">
-		<img src="style/James_People/64.jpeg" style="width: 15%">
+		<img src="style/default/2.jpeg" style="width: 15%">
+		<img src="style/default/4.jpeg" style="width: 15%">
+		<img src="style/default/8.jpeg" style="width: 15%">
+		<img src="style/default/16.jpeg" style="width: 15%">
+		<img src="style/default/32.jpeg" style="width: 15%">
+		<img src="style/default/64.jpeg" style="width: 15%">
 	</div>
 	<div id="sel-btm">
-		<img src="style/James_People/128.jpeg" style="width: 15%">
-		<img src="style/James_People/256.jpeg" style="width: 15%">
-		<img src="style/James_People/512.jpeg" style="width: 15%">
-		<img src="style/James_People/1024.jpeg" style="width: 15%">
-		<img src="style/James_People/2048.jpeg" style="width: 15%">
+		<img src="style/default/128.jpeg" style="width: 15%">
+		<img src="style/default/256.jpeg" style="width: 15%">
+		<img src="style/default/512.jpeg" style="width: 15%">
+		<img src="style/default/1024.jpeg" style="width: 15%">
+		<img src="style/default/2048.jpeg" style="width: 15%">
 	</div>
 	<div id="btn-container">
 		<a class="sel-button" style="float: left;">Last</a><p id="sel-display" style="display: inline;">Hello</p>
