--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
 		<img src="style/default/2048.jpeg" style="width: 15%">
 	</div>
 	<div id="btn-container">
-		<a class="sel-button" style="float: left;">Last</a><p id="sel-display" style="display: inline;">Hello</p>
-
+		<a class="sel-button" style="float: left;">Last</a>
+		<p id="sel-display" style="display: inline;">Default</p>
 		<a class="sel-button" style="float: right;">Next</a>
 	</div>
 </div>
