--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
     </div>
 
 <div class="sel-container">
+    <p id="sel-text" style="font-weight: bold;">Default</p>
 	<div id="sel-top">
 		<img src="style/default/2.jpeg" style="width: 15%">
 		<img src="style/default/4.jpeg" style="width: 15%">
@@ -91,7 +92,7 @@
 	</div>
 	<div id="btn-container">
 		<a class="sel-button" style="float: left;">Last</a>
-		<p id="sel-display" style="display: inline;">Default</p>
+		<a class="sel-button" style="display: inline-block;">Toggle Text</a>
 		<a class="sel-button" style="float: right;">Next</a>
 	</div>
 </div>
