--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
   <script src="js/tile.js"></script>
   <script src="js/local_storage_manager.js"></script>
   <script src="js/game_manager.js"></script>
+  <script src="js/style.js"</script>
   <script src="js/application.js"></script>
 </body>
 </html>
