--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
 		<img src="style/default/2048.jpeg" style="width: 15%">
 	</div>
 	<div id="btn-container">
-		<a class="sel-button" style="float: left;">Last</a>
-		<a class="sel-button" style="display: inline-block;">Toggle Text</a>
-		<a class="sel-button" style="float: right;">Next</a>
+		<a class="sel-button" onclick="setNextStyle()" style="float: left;">Last</a>
+		<a class="sel-button" onclick="setLastStyle()" style="display: inline-block;">Toggle Text</a>
+		<a class="sel-button" onclick="toggleText()" style="float: right;">Next</a>
 	</div>
 </div>
 	  
