--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
 	</div>
 	<div id="btn-container">
 		<a class="sel-button" onclick="setNextStyle()" style="float: left;">Last</a>
-		<a class="sel-button" onclick="setLastStyle()" style="display: inline-block;">Toggle Text</a>
-		<a class="sel-button" onclick="toggleText()" style="float: right;">Next</a>
+		<a class="sel-button" onclick="toggleText()" style="display: inline-block;">Toggle Text</a>
+		<a class="sel-button" onclick="setLastStyle()" style="float: right;">Next</a>
 	</div>
 </div>
 	  
