--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     </div>
 
 <div class="sel-container">
-    <p id="sel-text" style="font-weight: bold;">Default</p>
+    <p id="sel-text" style="font-weight: bold;">default</p>
 	<div id="sel-top">
 		<img src="style/default/2.jpeg" style="width: 15%">
 		<img src="style/default/4.jpeg" style="width: 15%">
