--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 </div>
 	  
     <p class="game-explanation">
-      <strong class="important">How to play:</strong> Use your <strong>arrow keys</strong> to move the tiles. When two tiles with the same face touch, they <strong>merge into one!</strong>
+      <strong class="important">How to play:</strong> Use your <strong>arrow keys</strong> to move the tiles. When two tiles with the same face touch, they <strong>merge into one!</strong> Use the controls above to change the images!
     </p>
     <hr>
     <p>
